--- a/web/package.json
+++ b/web/package.json
@@ -1,19 +1,19 @@
 {
   "name": "pixl.js.web",
+  "private": true,
   "description": "A Vue.js project",
   "author": "yi.shyang@ele.me",
-  "private": true,
   "scripts": {
+    "build": "rimraf dist && webpack -p --progress --hide-modules",
     "dev": "webpack-dev-server --inline --hot --env.dev",
-    "build": "rimraf dist && webpack -p --progress --hide-modules"
+    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
+    "@vue/cli-shared-utils": "^5.0.8",
+    "bytebuffer": "5.0.1",
     "element-ui": "^2.15.11",
     "vue": "^2.5.16",
-    "bytebuffer": "5.0.1"
-  },
-  "engines": {
-    "node": ">=6"
+    "vue-i18n": "^8.26.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.6.0",
@@ -27,9 +27,13 @@
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
+    "vue-cli-plugin-i18n": "~2.3.2",
     "vue-loader": "^13.3.0",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
+  },
+  "engines": {
+    "node": ">=6"
   }
 }
